Change trigger branch from 'main' to 'master'

--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -2,7 +2,7 @@ name: Build Reveal.js Slides
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'slides.md'
       - 'images/**'
