--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -8,6 +8,9 @@ on:
       - 'images/**'
       - '.github/workflows/**'
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
